utilize new postable fields in debug/data distributors

--- a/TASVideos/Pages/Shared/Components/MediaPosts/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/MediaPosts/Default.cshtml
@@ -3,6 +3,8 @@
 <table class="table table-striped">
 	<tr>
 		<th>Title</th>
+		<th>User</th>
+		<th>Group</th>
 		<th>Body</th>
 		<th>Link</th>
 		<th>Type/Group</th>
@@ -12,6 +14,8 @@
 	{
 		<tr>
 			<td>@post.Title</td>
+			<td>@post.User</td>
+			<td>@post.Group</td>
 			<td>@post.Body</td>
 			<td><a href="@post.Link">@post.Link</a></td>
 			<td>@post.Type (@post.Group)</td>
