--- a/TASVideos/Pages/Games/Index.cshtml
+++ b/TASVideos/Pages/Games/Index.cshtml
@@ -29,6 +29,19 @@
 			<li>DisplayName: @Model.Game.DisplayName</li>
 			<li>Good tools name: @Model.Game.GoodName</li>
 			<li>Game resources: <a href="/@Model.Game.GameResourcesPage">@Model.Game.GameResourcesPage</a></li>
+			<li condition="Model.Game.GameGroups.Any()">
+				Game groups:<br />
+				<ul>
+					@foreach (var group in Model.Game.GameGroups)
+					{
+						<li>
+							<a asp-page="/GameGroups/Index" asp-route-id="@group.Id">
+								@group.Name
+							</a>
+						</li>
+					}
+				</ul>
+			</li>
 		</ul>
 
 	</column>
