--- a/TASVideos/Pages/Forum/Subforum/Index.cshtml
+++ b/TASVideos/Pages/Forum/Subforum/Index.cshtml
@@ -5,17 +5,6 @@
 	ViewData["Title"] = $"TASVideos Forum {Model.Forum.Name}";
 }
 
-@functions {
-	string ToTitle(string title, ForumTopicType type)
-	{
-		return type switch
-		{
-			ForumTopicType.Sticky => ("<b>Sticky: </b> " + title),
-			ForumTopicType.Announcement => ("<b>Announcement: </b> " + title),
-			_ => title
-		};
-	}
-}
 <partial Name="_ForumHeader" />
 <a permission="EditForums" asp-page="Edit" asp-route-id="@Model.Forum.Id" class="pull-right btn btn-primary btn-sm">Edit</a>
 <a permission="CreateForumTopics" asp-page="/Forum/Topics/Create" asp-route-forumId="@Model.Forum.Id" class="mr-2 pull-right btn btn-primary btn-sm"><span class="fa fa-plus"></span> New Topic</a>
@@ -46,7 +35,7 @@
 			</td>
 			<td>
 				<a asp-page="/Forum/Topics/Index" asp-route-id="@topic.Id">
-					@Html.Raw(ToTitle(topic.Title, topic.Type))
+					@Html.Raw(topic.Type.ToTitleHtml(topic.Title))
 				</a>
 			</td>
 			<td>@(topic.PostCount - 1)</td>
