--- a/TASVideos/Pages/Shared/Components/TabularMovieList/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/TabularMovieList/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<TabularMovieListResultModel>
 @{
-	string? flink = ViewData["flink"]?.ToString();
-	string? footer = ViewData["footer"]?.ToString();
+	string flink = ViewData["flink"]?.ToString() ?? "";
+	string footer = ViewData["footer"]?.ToString() ?? "";
 	var first = Model.FirstOrDefault();
 }
 <hr />
