--- a/TASVideos/Pages/Submissions/Index.cshtml
+++ b/TASVideos/Pages/Submissions/Index.cshtml
@@ -85,7 +85,7 @@
 <hr />
 <partial name="_Pager" model="Model.Submissions" />
 <table class="table table-striped table-bordered">
-	<sortable-table-head model-type="typeof(TASVideos.Pages.Submissions.Models.SubmissionListEntry)" sorting="Model.Search" />
+	<sortable-table-head model-type="typeof(SubmissionListEntry)" sorting="Model.Search" />
 	@foreach (var item in Model.Submissions)
 	{
 		<tr>
