a few misc simplifications/cleanups

--- a/TASVideos/Pages/Shared/Components/WikiTextChangeLog/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/WikiTextChangeLog/Default.cshtml
@@ -21,7 +21,7 @@
 			<tr>
 				<td><a href="/@item.PageName">@item.PageName</a> <small>(r@(item.Revision))</small></td>
 				<td>@item.Author</td>
-				<td>@item.RevisionMessage @(item.MinorEdit ? ("(Minor edit)") : "")</td>
+				<td>@item.RevisionMessage @(item.MinorEdit ? "(Minor edit)" : "")</td>
 				<td>@item.CreateTimestamp.ToShortTimeString()</td>
 				<td>
 					<a
