adddress a bunch of dereference of nullable type compiler warnings

--- a/TASVideos/Pages/Forum/Index.cshtml
+++ b/TASVideos/Pages/Forum/Index.cshtml
@@ -6,7 +6,7 @@
 <partial Name="_ForumHeader" />
 <fullrow class="pb-2 pt-2">
 	<div class="pull-right">
-		<a asp-page="/Forum/Posts/New" condition="@User.Identity.IsAuthenticated" class="btn btn-secondary btn-sm">
+		<a asp-page="/Forum/Posts/New" condition="@User.IsLoggedIn()" class="btn btn-secondary btn-sm">
 			Posts since last visit
 		</a>
 		<a asp-page="/Forum/Posts/Unanswered" class="btn btn-secondary btn-sm">
