--- a/TASVideos/Pages/Messages/Sentbox.cshtml
+++ b/TASVideos/Pages/Messages/Sentbox.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id?}/{handler?}"
 @model SentboxModel
 @{
-	ViewData["Title"] = $"Saved messages for {User.Identity.Name}";
+	ViewData["Title"] = $"Saved messages for {User.Name()}";
 }
 
 <a asp-page="Inbox" class="btn btn-secondary mb-1"><span class="fa fa-arrow-left"></span> Inbox</a>
