--- a/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
@@ -78,7 +78,7 @@
 				Profile
 			</profile-link>
 			<a
-				condition="User.Identity.IsAuthenticated"
+				condition="User.IsLoggedIn()"
 				asp-page="/Messages/Create"
 				asp-route-defaultToUser="@Model.PosterName"
 				class="btn btn-secondary btn-sm">
