--- a/TASVideos/Pages/Profile/HomePage.cshtml
+++ b/TASVideos/Pages/Profile/HomePage.cshtml
@@ -5,7 +5,7 @@
 @{
 	ViewData["Title"] = "Home Page";
 	ViewData.AddActivePage(ProfileNavPages.HomePage);
-	var homePage = $"HomePages/{User.Identity.Name}";
+	var homePage = $"HomePages/{User.Name()}";
 	bool pageExists = await WikiPages.Exists(homePage);
 }
 <br />
