--- a/TASVideos/Pages/Roles/List.cshtml
+++ b/TASVideos/Pages/Roles/List.cshtml
@@ -11,10 +11,7 @@
 <h4>@ViewData["Title"]</h4>
 <p>These are a list of the site roles</p>
 <hr />
-@if (User.Identity.IsAuthenticated)
-{
-	<p>See the <a asp-page="/Permissions/Index">Permission List</a> for details on individual permissions</p>
-}
+<p condition="User.IsLoggedIn()">See the <a asp-page="/Permissions/Index">Permission List</a> for details on individual permissions</p>
 
 @* ReSharper disable once UnusedVariable *@
 @foreach (var role in Model.Roles.OrderBy(m => m.Permissions.Count()))
