--- a/TASVideos/Pages/Forum/Topics/Index.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Index.cshtml
@@ -16,7 +16,7 @@
 	</a>
 </fullrow>
 
-@if (Model.Topic.Poll != null)
+@if (Model.Topic.Poll is not null)
 {
 	<hr />
 	<partial name="_Poll" model="Model.Topic.Poll" />
