--- a/TASVideos/Pages/Shared/_UserFileInfo.cshtml
+++ b/TASVideos/Pages/Shared/_UserFileInfo.cshtml
@@ -47,13 +47,13 @@
 					For
 					<a href="/Games/@Model.GameId">@Model.GameName</a>
 
-					@if (Model.System != null)
+					@if (Model.System is not null)
 					{
 						<text>(@Model.System)</text>
 					}
 				</p>
 			}
-			else if (Model.System != null)
+			else if (Model.System is not null)
 			{
 				<text>For @Model.System</text>
 			}
