--- a/TASVideos/Pages/Shared/Components/MoviesList/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/MoviesList/Default.cshtml
@@ -37,6 +37,6 @@
 	</table>
 	<div>
 			<p>@Model.Movies.Count(m => !m.IsObsolete) current publications in @pubGroups.Count(g => g.Any(gg => !gg.IsObsolete)) games</p>
-			<p>@Model.Movies.Count() runs in @pubGroups.Count() games</p>
+			<p>@Model.Movies.Count runs in @pubGroups.Count() games</p>
 	</div>
 </div>
