--- a/TASVideos/Pages/Shared/Components/GameName/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/GameName/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model IList<TASVideos.ViewComponents.Models.GameNameModel>
+﻿@model IList<GameNameModel>
 
 @if (Model.Any(g => g.IsSystem))
 {
@@ -6,7 +6,6 @@
 }
 else
 {
-	//foreach (var game in Model)
 	for (int i = 0; i < Model.Count; i++)
 	{
 		<game-link id="Model[i].GameId">@Model[i].DisplayName</game-link><span condition="i < Model.Count - 1">, </span>
