--- a/TASVideos/Pages/Submissions/Edit.cshtml
+++ b/TASVideos/Pages/Submissions/Edit.cshtml
@@ -107,7 +107,7 @@
 	<hr />
 	<fullrow class="text-center">
 		<button id="preview-button" type="button" class="btn btn-secondary">Preview</button>
-		<button id="submit-btn" type="submit" class="btn btn-primary @(Model.Submission.Markup?.Length > 0 ? "" : "hide")">Update</button>
+		<button id="submit-btn" type="submit" class="btn btn-primary @(Model.Submission.Markup.Length > 0 ? "" : "hide")">Update</button>
 		<a class="btn btn-secondary" asp-page="View" asp-route-id="@Model.Id">Cancel</a>
 	</fullrow>
 </form>
