--- a/TASVideos/Pages/Submissions/Submit.cshtml
+++ b/TASVideos/Pages/Submissions/Submit.cshtml
@@ -88,7 +88,7 @@
 	<hr />
 	<fullrow class="text-center">
 		<button id="preview-button" type="button" class="btn btn-secondary">Preview</button>
-		<submit-button id="submit-btn" class="btn btn-primary @(Model.Create.Markup?.Length > 0 ? "" : "d-none")">Submit</submit-button>
+		<submit-button id="submit-btn" class="btn btn-primary @(Model.Create.Markup.Length > 0 ? "" : "d-none")">Submit</submit-button>
 		<br />
 		<br />
 		<div id="submit-blurb" class="text-center alert-info d-none" role="alert">
