use some async method overloads where possible

--- a/TASVideos/Pages/Profile/_Layout.cshtml
+++ b/TASVideos/Pages/Profile/_Layout.cshtml
@@ -12,5 +12,5 @@
 	</div>
 </row>
 @section Scripts {
-	@RenderSection("Scripts", required: false)
+	@await RenderSectionAsync("Scripts", required: false)
 }
