--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
 	}
 	@if (IsSectionDefined("PageTitle"))
 	{
-		@RenderSection("PageTitle")
+		@await RenderSectionAsync("PageTitle")
 	}
 	else
 	{
