--- a/TASVideos/Pages/Shared/_WikiLayout.cshtml
+++ b/TASVideos/Pages/Shared/_WikiLayout.cshtml
@@ -15,6 +15,6 @@
 @section Scripts {
 	@if (IsSectionDefined("Scripts"))
 	{
-		@RenderSection("Scripts")
+		@await RenderSectionAsync("Scripts")
 	}
 }
