--- a/TASVideos/Pages/Shared/Components/FeedLog/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/FeedLog/Default.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TASVideos.Services.RssFeedParsers.ICommitEntry>
+﻿@using System.Globalization
+@model IEnumerable<TASVideos.Services.RssFeedParsers.CommitEntry>
 
 <table class="table table-striped table-bordered table-sm">
 	<tr>
@@ -9,7 +10,7 @@
 	@foreach (var entry in Model)
 	{
 		var result = DateTime.TryParse(entry.At, out var date);
-		string dateStr = result ? date.ToString() : "";
+		string dateStr = result ? date.ToString(CultureInfo.CurrentCulture) : "";
 		<tr>
 			<td>@entry.Author</td>
 			<td>@dateStr</td>
