--- a/TASVideos/Pages/Messages/Sentbox.cshtml
+++ b/TASVideos/Pages/Messages/Sentbox.cshtml
@@ -9,7 +9,6 @@
 	<tr>
 		<th>@Html.DisplayNameFor(m => m.SentBox.First().Subject)</th>
 		<th>@Html.DisplayNameFor(m => m.SentBox.First().ToUser)</th>
-		<th>@Html.DisplayNameFor(m => m.SentBox.First().ToUser)</th>
 		<th>@Html.DisplayNameFor(m => m.SentBox.First().SendDate)</th>
 		<th>Actions</th>
 	</tr>
@@ -22,8 +21,7 @@
 				<span Condition="@(!entry.HasBeenRead)" class="fa fa-send-o" title="User has not yet read"></span>
 				<a asp-page="Index" asp-route-id="@entry.Id">@entry.Subject</a>
 			</td>
-			<td>@entry.ToUser</td>
-			<td>@entry.ToUser</td>
+			<td><profile-link username="@entry.ToUser">@entry.ToUser</profile-link></td>
 			<td>@entry.SendDate</td>
 			<td>
 				<delete-button
