Add an Unrated Movies page in the profile section for rating publications, minimally fixes #104

--- a/TASVideos/Pages/Profile/_ProfileNav.cshtml
+++ b/TASVideos/Pages/Profile/_ProfileNav.cshtml
@@ -18,6 +18,9 @@
 		<a class="nav-link @ProfileNavPages.RatingsNavClass(ViewContext)" asp-page="Ratings">My Ratings</a>
 	</li>
 	<li class="nav-item">
+		<a class="nav-link @ProfileNavPages.UnratedNavClass(ViewContext)" asp-page="Unrated">My Unrated Movies</a>
+	</li>
+	<li class="nav-item">
 		<a class="nav-link @ProfileNavPages.TopicsNavClass(ViewContext)" asp-page="WatchedTopics">My Watched Topics</a>
 	</li>
 </ul>
