fix typo in on screen message

--- a/TASVideos/Pages/Publications/AdditionalMovies.cshtml
+++ b/TASVideos/Pages/Publications/AdditionalMovies.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h4>Additional Movie Files:</h4>
-<label condition="!Model.AvailableMovieFiles.Any()"><i>No additonal movie files</i></label>
+<label condition="!Model.AvailableMovieFiles.Any()"><i>No additional movie files</i></label>
 <row condition="Model.AvailableMovieFiles.Any()">
 	<div class="col-lg-4 col-sm-6">
 		<table class="table table-bordered">
