--- a/TASVideos/Pages/Publications/EditFiles.cshtml
+++ b/TASVideos/Pages/Publications/EditFiles.cshtml
@@ -62,9 +62,9 @@
 		var descriptionForm = document.getElementById('description-group');
 		typeModel.onchange = function () {
 			if (this.value == 0) {
-				descriptionForm.classList.remove('d-none')
+				descriptionForm.classList.remove('d-none');
 			} else {
-				descriptionForm.classList.add('d-none')
+				descriptionForm.classList.add('d-none');
 			}
 		};
 	})()
