--- a/TASVideos/wwwroot/css/site.css
+++ b/TASVideos/wwwroot/css/site.css
@@ -259,9 +259,9 @@ article.wiki table tbody + tbody {
 }
 
 .card-link:hover {
-	box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.31) 0px 0px 1px;
-	transition: opacity 140ms ease-in-out 0s;
-	transform: translate3d(0px, -2px, 0px);
+	box-shadow: rgba(9, 30, 66, 0.25) 0 4px 8px -2px, rgba(9, 30, 66, 0.31) 0 0 1px;
+	transition: opacity 140ms ease-in-out 0;
+	transform: translate3d(0, -2px, 0);
 }
 
 .card-link-header {
