add TASVideos.Services to _ViewImports

--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TASVideos.Pages.Publications.Models.PublicationDisplayModel
 
-@inject TASVideos.Services.IAwards Awards 
+@inject IAwards Awards 
 @{
 	var publicationAwards = await Awards.ForPublication(Model.Id);
 }
