--- a/TASVideos/Pages/Account/Login.cshtml
+++ b/TASVideos/Pages/Account/Login.cshtml
@@ -33,6 +33,9 @@
 				<button type="submit" class="btn btn-secondary">Log in</button>
 			</form-group>
 			<form-group>
+				Please view our <a href="/System/PrivacyPolicy">Privacy Policy</a>
+			</form-group>
+			<form-group>
 				<p><a asp-page="ForgotPassword">Forgot your password?</a></p>
 				<p><a asp-page="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Register as a new user?</a></p>
 			</form-group>
