Fix some bugs and add some enhancements for [code] blocks in forum posts
* Syntax highlighting was all borked because we were doing <code><pre> instead of <pre><code>.  Works now.
* The old system had the option of giving a download link if a full filename was given.  This was not working, and it was breaking the syntax highlighting doubly.  Works now.
* Syntax highlighting was not working in post preview.

Closes #284

--- a/TASVideos/Pages/Shared/_PreviewWindow.cshtml
+++ b/TASVideos/Pages/Shared/_PreviewWindow.cshtml
@@ -20,6 +20,7 @@
 				if (xmlhttp.readyState === XMLHttpRequest.DONE) {
 					if (xmlhttp.status === 200) {
 						$(document.getElementById('preview-contents')).empty().append($(xmlhttp.responseText));
+						Prism.highlightAll();
 					} else {
 						alert("Could not generate preview");
 					}
