--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -6,8 +6,8 @@
 	<title>@(ViewData["Title"] != null ? ViewData["Title"] + " - " : "")TASVideos</title>
 
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="~/lib/twitter-bootstrap/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="~/css/site.css" />
+	<link rel="stylesheet" href="~/css/bootstrap.scss" />
+	<link rel="stylesheet" href="~/css/site.scss" />
 	<link rel="stylesheet" href="~/lib/font-awesome/css/font-awesome.css"/>
 	
 	<link rel="stylesheet" href="~/css/diffview.css" />
