Some minor code cleanup
* <script> has an implied type of "text/javascript" if not explicitly given.  Since almost all scripts are javascript, I see no need to be explicit here.
* Remove use of jquery in the forum markup preview code.  We don't directly use jquery anywhere else, so let's not start here.  The replacement is also easier to grok:  we're emptying and replacing in a single step instead of two, and explicitly treating the responseText as html instead of passing it to the magick $ function.

--- a/TASVideos/Pages/Wiki/Diff.cshtml
+++ b/TASVideos/Pages/Wiki/Diff.cshtml
@@ -20,7 +20,7 @@
 	<div id="ResultMarkup"></div>
 </row>
 
-<script type="text/javascript">
+<script>
 	document.addEventListener("DOMContentLoaded", function () {
 		generateDiff(1, false);
 	});
