Replace a tuple with a viewmodel
This feels awful, but better than guessing what `Item1` and `Item2` are

--- a/TASVideos/Pages/Forum/Posts/Create.cshtml
+++ b/TASVideos/Pages/Forum/Posts/Create.cshtml
@@ -34,7 +34,7 @@
 	</div>
 </form>
 
-<partial name="_PreviewWindow" model="@(("Post_Text", "/Forum/Preview"))" />
+<partial name="_PreviewWindow" model="@(new MarkupPreviewModel("Post_Text", "/Forum/Preview"))" />
 
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
