--- a/TASVideos/Pages/Forum/Posts/Edit.cshtml
+++ b/TASVideos/Pages/Forum/Posts/Edit.cshtml
@@ -56,7 +56,7 @@
 		<a asp-page="/Forum/Topics/Index" asp-route-id="@Model.Post.TopicId" class="btn btn-secondary">Cancel</a>
 	</div>
 </form>
-<partial name="_PreviewWindow" model="@(("Post_Text", "/Forum/Preview"))" />
+<partial name="_PreviewWindow" model="@(new MarkupPreviewModel("Post_Text", "/Forum/Preview"))" />
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
 }
