--- a/TASVideos/Pages/Wiki/Edit.cshtml
+++ b/TASVideos/Pages/Wiki/Edit.cshtml
@@ -36,7 +36,7 @@
 	</div>
 </form>
 
-<partial name="_PreviewWindow" model="@(("PageToEdit_Markup", "/Wiki/Preview?Id=" + Model.Id))" />
+<partial name="_PreviewWindow" model="@(new MarkupPreviewModel("PageToEdit_Markup", "/Wiki/Preview?Id=" + Model.Id))" />
 
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
