--- a/TASVideos/Pages/Messages/Create.cshtml
+++ b/TASVideos/Pages/Messages/Create.cshtml
@@ -45,7 +45,7 @@
 	</div>
 </form>
 
-<partial name="_PreviewWindow" model="@((nameof(Model.Text), "/Forum/Preview"))" />
+<partial name="_PreviewWindow" model="@(new MarkupPreviewModel(nameof(Model.Text), "/Forum/Preview"))" />
 
 <script>
 	(function () {
