--- a/TASVideos/Pages/Publications/Edit.cshtml
+++ b/TASVideos/Pages/Publications/Edit.cshtml
@@ -108,7 +108,7 @@
 	</div>
 </form>
 
-<partial name="_PreviewWindow" model="@(Html.IdFor(m => m.Publication.Markup), "/Wiki/Preview")" />
+<partial name="_PreviewWindow" model="@(new MarkupPreviewModel(Html.IdFor(m => m.Publication.Markup), "/Wiki/Preview"))" />
 
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
