--- a/TASVideos/Pages/Submissions/Submit.cshtml
+++ b/TASVideos/Pages/Submissions/Submit.cshtml
@@ -106,7 +106,7 @@
 	</fullrow>
 </form>
 
-<partial name="_PreviewWindow" model="@((Html.IdFor(m => m.Create.Markup), "/Wiki/Preview"))" />
+<partial name="_PreviewWindow" model="@(new MarkupPreviewModel(Html.IdFor(m => m.Create.Markup), "/Wiki/Preview"))" />
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
 }
