make forum topics look better

--- a/TASVideos/wwwroot/css/site.scss
+++ b/TASVideos/wwwroot/css/site.scss
@@ -282,3 +282,11 @@ article.wiki table {
 .wiki-edit {
 	font-family: courier,"courier new",monospace;
 }
+
+.forum-signature {
+	font-style: italic;
+	background-color: #eaeaea;
+	border: solid 1px #ccc;
+	border-radius: 5px;
+	padding: .5rem;
+}
