--- a/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
@@ -1,10 +1,7 @@
 ﻿@model TASVideos.Pages.Forum.Posts.Models.ForumPostEntry
 <card class="@(Model.Highlight ? "border-info" : "")">
-	<cardheader>
+	<cardheader class="pt-1 pb-1">
 		<row>
-			<div class="col-lg 2 col-md-3 col-4 border-right">
-				<h5>@Model.PosterName</h5>
-			</div>
 			<div class="col-lg 10 col-md-9 col-8 pt-0 pb-0">
 				<small style="display: inline-block">
 					<a
@@ -15,11 +12,18 @@
 						<i class="fa fa-bookmark-o"></i>
 					</a>
 					Posted: <timezone-convert asp-for="@Model.CreateTimestamp" /> 
-					<span condition="!string.IsNullOrWhiteSpace(Model.Subject)">
-						Post subject: @Model.Subject
-					</span>
+				</small>
+				<small condition="!string.IsNullOrWhiteSpace(Model.Subject)" class="text-center">
+					Post subject: @Model.Subject
 				</small>
 				<small class="pull-right" style="display: inline-block">
+					<a
+						condition="User.IsLoggedIn()"
+						asp-page="/Messages/Create"
+						asp-route-defaultToUser="@Model.PosterName"
+						class="btn btn-secondary btn-sm">
+						PM
+					</a>
 					<a
 						asp-page="/Forum/Posts/Create"
 						asp-route-topicId="@Model.TopicId"
@@ -48,13 +52,20 @@
 	<cardbody>
 		<row>
 			<div class="col-lg-2 col-md-3 col-4">
-				<div class="card-text text-right">
+				<div class="text-center">
+					<h6>
+						<profile-link username="@Model.PosterName">@Model.PosterName</profile-link>
+					</h6>
+				</div>
+				<div class="card-text text-right" style="line-height: 1">
 					<small>
-						@string.Join(",", Model.PosterRoles)
+						@string.Join(", ", Model.PosterRoles)
 						<span condition="Model.PosterPlayerPoints >= 5">(@Math.Round(Model.PosterPlayerPoints))</span>
 					</small>
 					<br />
-					<avatar avatar="@Model.PosterAvatar" mood-avatar-base="@Model.PosterMoodUrlBase" mood="@Model.PosterMood" />
+					<div class="mt-3 mb-3">
+						<avatar avatar="@Model.PosterAvatar" mood-avatar-base="@Model.PosterMoodUrlBase" mood="@Model.PosterMood" />
+					</div>
 					<br />
 					<small>
 						Joined: <timezone-convert asp-for="@Model.PosterJoined" date-only="true" /><br />
@@ -62,35 +73,23 @@
 						Location: @Model.PosterLocation
 					</small>
 				</div>
+				<div>
+					@* ReSharper disable once UnusedVariable *@
+					@foreach (var award in Model.Awards.OrderByDescending(a => a.Year))
+					{
+						<partial name="_Award" model="award" />
+					}
+				</div>
 			</div>
 			<div class="col-lg-10 col-md-9 col-8">
 				@Html.Raw(Model.RenderedText)
+				<div condition="!string.IsNullOrWhiteSpace(Model.RenderedSignature)">
+					
+					<div class="forum-signature mt-2">
+						<small>@Html.Raw(Model.RenderedSignature)</small>
+					</div>
+				</div>
 			</div>
 		</row>
 	</cardbody>
-	<cardfooter>
-		<fullrow>
-			<small style="font-style: italic">@Html.Raw(Model.RenderedSignature)</small>
-			<br />
-			<profile-link
-				username="@Model.PosterName"
-				class="btn btn-info btn-sm">
-				Profile
-			</profile-link>
-			<a
-				condition="User.IsLoggedIn()"
-				asp-page="/Messages/Create"
-				asp-route-defaultToUser="@Model.PosterName"
-				class="btn btn-secondary btn-sm">
-				PM
-			</a>
-			<div class="pull-right">
-				@* ReSharper disable once UnusedVariable *@
-				@foreach (var award in Model.Awards.OrderByDescending(a => a.Year))
-				{
-					<partial name="_Award" model="award" />
-				}
-			</div>
-		</fullrow>
-	</cardfooter>
 </card>
