very small change to Forum/Topics

--- a/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
@@ -9,7 +9,7 @@
 						href="/Forum/Posts/@(Model.Id)#@Model.Id" 
 						title="Link to this post" 
 						class="pull-left">
-						<i class="fa fa-bookmark-o"></i>
+						<i class="fa fa-bookmark-o mr-1"></i>
 					</a>
 					Posted: <timezone-convert asp-for="@Model.CreateTimestamp" /> 
 				</small>
